@@ -46,6 +46,14 @@ attributes of zipfilesets in a Zip or Jar task.)</p>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">encoding</td>
+    <td valign="top">The character encoding to use for filenames
+      inside the archive.  Defaults to UTF8. <strong>It is not
+      recommended to change this value as the created archive will most
+      likely be unreadable for Java otherwise.</strong></td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">includes</td>
     <td valign="top">comma separated list of patterns of files that must be
       included. All files are included when omitted.</td>
